--- a/package.json
+++ b/package.json
@@ -49,5 +49,8 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:cover": "jest --coverage"
+  },
+  "dependencies": {
+    "dom-context": "0.0.2"
   }
 }
